// Copyright 2017 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package authpolicy;

// TODO(ljusten): Remove this file as soon as Chrome uses
// active_directory_info.proto. crbug.com/712720.

// Message sent to Chromium by authpolicy service as a response of successful
// AuthenticateUser call. Contains information about authenticated user fetched
// from Active Directory server.
message ActiveDirectoryAccountData {
  // Unique id of the user account. Taken from the objectGUID property of the
  // Active Directory user account information.
  optional string account_id = 1;
  // Display name of the user. Taken from the displayName property of the Active
  // account information.
  optional string display_name = 2;
  // Given name of the user. AKA first name. Taken from givenName property of
  // the Active Directory user account information.
  optional string given_name = 3;
  // Logon name of the user (without @realm). Taken from the sAMAccountName
  // property of the Active Directory user account information.
  optional string sam_account_name = 4;
}
